<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/empty_field"
            android:ems="10"
            android:id="@+id/nameBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.07999998"/>
    <TextView
            android:text="@string/enter_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/nameBox"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/nameBox"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textColor="#800080" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/findButton"
            app:layout_constraintEnd_toStartOf="@+id/nameBox" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="@+id/nameBox"
            app:layout_constraintVertical_bias="1.0" android:onClick="func"/>
    <TextView
            android:text="@string/frequent_word_1"
            android:layout_width="wrap_content"
            android:textColor="#800080"
            android:layout_height="wrap_content" android:id="@+id/frequentWord1"
            app:layout_constraintStart_toStartOf="@+id/findButton"
            app:layout_constraintEnd_toEndOf="@+id/findButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findButton" app:layout_constraintVertical_bias="0.050000012"/>
    <TextView
            android:text="@string/frequent_word_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/frequentWord2"
            app:layout_constraintEnd_toEndOf="@+id/frequentWord1"
            app:layout_constraintStart_toStartOf="@+id/frequentWord1"
            android:textColor="#800080" app:layout_constraintTop_toBottomOf="@+id/frequentWord1"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04000002"/>
    <TextView
            android:text="@string/frequent_word_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/frequentWord3"
            app:layout_constraintStart_toStartOf="@+id/frequentWord2"
            app:layout_constraintEnd_toEndOf="@+id/frequentWord2"
            android:textColor="#800080" app:layout_constraintTop_toBottomOf="@+id/frequentWord2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.050000012"/>
    <Button
            android:text="@string/new_word"
            android:layout_width="336dp"
            android:layout_height="50dp" android:id="@+id/newWordButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meaningBox"
            app:layout_constraintVertical_bias="0.16000003" app:layout_constraintStart_toStartOf="@+id/meaningBox"
            app:layout_constraintEnd_toEndOf="@+id/meaningBox"/>
    <Button
            android:text="@string/remove"
            android:layout_width="336dp"
            android:layout_height="50dp" android:id="@+id/removeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meaningBox"
            app:layout_constraintVertical_bias="0.7" app:layout_constraintStart_toStartOf="@+id/meaningBox"
            app:layout_constraintEnd_toEndOf="@+id/meaningBox" android:onClick="removeButton"/>
    <TextView
            android:text="@string/empty_field"
            android:layout_width="349dp"
            android:layout_height="218dp" android:id="@+id/meaningBox"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#26000000"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/frequentWord3"
            app:layout_constraintVertical_bias="0.6"/>
    <TextView
            android:text="@string/empty_field"
            android:layout_width="208dp"
            android:background="#26000000"
            android:layout_height="31dp" android:id="@+id/frequentWordField1"
            app:layout_constraintStart_toStartOf="@+id/nameBox" app:layout_constraintEnd_toEndOf="@+id/nameBox"
            app:layout_constraintTop_toTopOf="@+id/frequentWord1"
            app:layout_constraintBottom_toBottomOf="@+id/frequentWord1"/>
    <TextView
            android:text="@string/empty_field"
            android:layout_width="208dp"
            android:background="#26000000"
            android:layout_height="31dp" android:id="@+id/frequentWordField2"
            app:layout_constraintStart_toStartOf="@+id/nameBox" app:layout_constraintEnd_toEndOf="@+id/nameBox"
            app:layout_constraintTop_toTopOf="@+id/frequentWord2"
            app:layout_constraintBottom_toBottomOf="@+id/frequentWord2"/>
    <TextView
            android:text="@string/empty_field"
            android:layout_width="208dp"
            android:background="#26000000"
            android:layout_height="31dp" android:id="@+id/frequentWordField3"
            app:layout_constraintStart_toStartOf="@+id/nameBox" app:layout_constraintEnd_toEndOf="@+id/nameBox"
            app:layout_constraintTop_toTopOf="@+id/frequentWord3"
            app:layout_constraintBottom_toBottomOf="@+id/frequentWord3"/>
</androidx.constraintlayout.widget.ConstraintLayout>